# sovereign

./: .env.example  .gitignore  .gitlab-ci.yml  Makefile  NOTICE  README.md  VIEWS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
adoption/: README.md  __init__.py  collector.py  grafana-dashboard.json
ci/: README.md  __init__.py  _job.py  config.py  gitlab.py  llm.py  prompts.py  review.py  summary.py  testgen.py
dashboard/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard_api/: Dockerfile  __init__.py  app.py  data.py  fixtures.py  results.py  schemas.py
docs/: README.md  USERS.md  USER_PERSONAS_FINDING.md  architecture.md  traceability.md  tradeoffs.md  workshop.md
docs/adr/: 0001-serving-engine.md  README.md  (+3 more)
eval/: README.md  __init__.py  __main__.py  bench.py  charts.py  client.py  leaderboard.py  quantize.py  registry_ops.py  runner.py  scorers.py  tasks.py
gateway/: Dockerfile  README.md  __init__.py  app.py  config.py  metrics.py  registry.py  registry.yaml  router.py  schemas.py
ide/: README.md  __init__.py  cli.py  client.py
inference/: README.md
infra/: README.md  cost.md
mcp/: README.md
mcp_servers/: README.md  __init__.py  context.py
rag/: README.md  __init__.py  chunking.py  embeddings.py  ingest.py  retrieval.py  store.py
sample_data/: README.md
sovereign/: __init__.py
tests/: test_adoption.py  test_bench.py  test_chunking.py  test_ci.py  test_dashboard_api.py  test_eval.py  test_gateway_api.py  test_ide.py  test_mcp_context.py  test_rag.py  test_registry.py  test_registry_ops.py  test_router.py  test_smoke.py
(+67 files in other folders)
