[project]
name = "sovereign"
version = "0.0.0"
description = "A self-hosted, data-sovereign AI platform for engineering teams."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Christopher King" }]
dependencies = []

# Feature modules pull their own deps via optional groups so the local $0 dev
# path stays lean. Each build-order step adds its group.
[project.optional-dependencies]
gateway = ["fastapi>=0.115", "uvicorn>=0.32", "httpx>=0.27", "pyyaml>=6.0", "prometheus-client>=0.21", "pydantic>=2.9"]
rag = ["qdrant-client>=1.12", "sentence-transformers>=3.3"]
mcp = ["mcp>=1.1"]
eval = ["matplotlib>=3.9", "pyyaml>=6.0", "httpx>=0.27"]
dev = ["ruff>=0.8", "mypy>=1.13", "pytest>=8.3", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sovereign", "gateway", "rag", "mcp_servers", "eval", "ci"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["sample_data", "dashboard", "infra"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# Target 3.12 so mypy parses third-party stubs (numpy's PEP 695 `type` syntax via
# matplotlib) correctly; our own code stays 3.11-compatible (enforced by ruff).
[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["sample_data/", "dashboard/", "infra/"]

[[tool.mypy.overrides]]
module = ["numpy.*", "matplotlib.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
